Update group descriptions to refer new location
sed -i -e 's/{{int:bw-desc-\(.*\)\}\}/{{Special:MyLanguage\/Translations:Group descriptions\/\1\/en}}/g' */*.yaml
sed -i -e 's/{{int:translate-group-desc-\(.*\)\}\}/{{Special:MyLanguage\/Translations:Group descriptions\/\1\/en}}/g' */*.yaml

Change-Id: I30321d719a20a41449f40bb4b75a749c06b1e1aa

--- a/groups/Blockly/Blockly.yaml
+++ b/groups/Blockly/Blockly.yaml
@@ -3,7 +3,7 @@ TEMPLATE:
     icon: wiki://Blockly-square.png
     namespace: NS_BLOCKLY
     class: FileBasedMessageGroup
-    description: "{{int:translate-group-desc-blockly}}"
+    description: "{{Special:MyLanguage/Translations:Group descriptions/blockly/en}}"
 
   FILES:
     class: JsonFFS
