--- a/groups/Europeana/Europeana.yaml
+++ b/groups/Europeana/Europeana.yaml
@@ -4,7 +4,7 @@ BASIC:
   icon: wiki://Europeana.jpg
   namespace: NS_EUROPEANA
   class: FileBasedMessageGroup
-  description: "{{int:translate-group-desc-europeana}}"
+  description: "{{Special:MyLanguage/Translations:Group descriptions/europeana/en}}"
 
 FILES:
   sourcePattern: "%GROUPROOT%/europeana/config/locales/%CODE%.yml"
