--- a/groups/FUDforum/FUDforum.yaml
+++ b/groups/FUDforum/FUDforum.yaml
@@ -3,7 +3,7 @@ BASIC:
   id: out-fudforum
   label: FUDforum
   icon: wiki://Fudforum.png
-  description: "{{int:bw-desc-fudforum}}"
+  description: "{{Special:MyLanguage/Translations:Group descriptions/fudforum/en}}"
   namespace: NS_FUDFORUM
   class: FileBasedMessageGroup
 
