--- a/groups/Nocc/Nocc.yaml
+++ b/groups/Nocc/Nocc.yaml
@@ -1,7 +1,7 @@
 TEMPLATE:
   BASIC:
     icon: wiki://Nocc_logo.png
-    description: "{{int:translate-group-desc-nocc}}"
+    description: "{{Special:MyLanguage/Translations:Group descriptions/nocc/en}}"
     namespace: NS_NOCC
     class: FileBasedMessageGroup
 
