--- a/groups/Wikimedia/WikimediaMobile.yaml
+++ b/groups/Wikimedia/WikimediaMobile.yaml
@@ -1,6 +1,6 @@
 TEMPLATE:
   BASIC:
-    description: "{{int:translate-group-desc-wikimedia-mobile}}"
+    description: "{{Special:MyLanguage/Translations:Group descriptions/wikimedia-mobile/en}}"
     icon: wiki://Wikimedia-logo.svg
     namespace: NS_WIKIMEDIA
     class: FileBasedMessageGroup
@@ -28,7 +28,7 @@ BASIC:
   id: out-wikimedia-mobile-wikisource
   label: Wikisource Mobile
   icon: wiki://Wikisource-logo.svg
-  description: "{{int:translate-group-desc-wikimedia-mobile-wikisource}}"
+  description: "{{Special:MyLanguage/Translations:Group descriptions/wikimedia-mobile-wikisource/en}}"
 
 MANGLER:
   class: StringMatcher
@@ -48,7 +48,7 @@ BASIC:
   id: out-wikimedia-mobile-wiktionary
   label: Wiktionary Mobile
   icon: wiki://Wiktionary-logo.svg
-  description: "{{int:translate-group-desc-wikimedia-mobile-wiktionary}}"
+  description: "{{Special:MyLanguage/Translations:Group descriptions/wikimedia-mobile-wiktionary/en}}"
 
 MANGLER:
   class: StringMatcher
