Update web config files
Change-Id: I71d44d640d59bca385504b4a74f9e98ee73c01de

--- a/puppet/modules/nginx/files/nginx.conf
+++ b/puppet/modules/nginx/files/nginx.conf
@@ -50,8 +50,8 @@ http {
 	##
 
 	upstream php {
-#		server unix:/run/hhvm/hhvm.sock;
-		server unix:/run/php5-fpm.sock;
+		server unix:/run/hhvm/hhvm.sock;
+		server unix:/run/php5-fpm.sock backup;
 	}
 
 	include /etc/nginx/sites-enabled/*;
