--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -14,7 +14,7 @@ hhvm.server.graceful_shutdown_wait = 5
 hhvm.server.stat_cache = 1
 hhvm.admin_server.port = 9001
 
-hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20140829
+hhvm.dynamic_extension_path = /usr/lib/x86_64-linux-gnu/hhvm/extensions/20150212
 hhvm.dynamic_extensions[*] = ffs.so
 hhvm.dynamic_extensions[*] = luasandbox.so
 hhvm.dynamic_extensions[*] = wikidiff2.so
@@ -22,9 +22,9 @@ hhvm.dynamic_extensions[*] = wikidiff2.so
 hhvm.perf_pid_map = false
 
 hhvm.jit = true
-hhvm.jit_a_size = 100000000
-hhvm.jit_a_frozen_size = 100000000
-hhvm.jit_a_cold_size = 50000000
+hhvm.jit_a_size = 600000000
+hhvm.jit_a_frozen_size = 200000000
+hhvm.jit_a_cold_size = 200000000
 
 hhvm.log.level = Notice
 hhvm.log.always_log_unhandled_exceptions = true
@@ -41,4 +41,5 @@ hhvm.enable_zend_compat = true
 hhvm.enable_obj_destruct_call = true
 
 hhvm.mysql.typed_results = false
-hhvm.mysql.slow_query_threshold = 5000
+hhvm.mysql.slow_query_threshold = 30000
+hhvm.mysql.connect_timeout = 3000
