Add message checker for iNaturalist
Copy of checker for Encyclopedia of Life. Checks for %{...}.

Change-Id: I4130bcaabdcb4e0852fab90bc6c67e39254ac56c

--- a/groups/iNaturalist/iNaturalist.yaml
+++ b/groups/iNaturalist/iNaturalist.yaml
@@ -22,3 +22,11 @@ FILES:
     zh-hans: zh-CN
     zh-hant: zh-TW
   codeAsRoot: true
+
+CHECKER:
+  class: INaturalistMessageChecker
+  checks:
+    - INaturalistVariablesCheck
+
+AUTOLOAD:
+  EOLMessageChecker: Checker.php
