Wikiblame moved to GitHub
See
https://translatewiki.net/wiki/Thread:Support/Relocating_WikiBlame_to_GitHub

Change-Id: I2e33754f4f961bec8af5b17ef91017bf82efbf5f

--- a/groups/Wikimedia/WikiBlame.yaml
+++ b/groups/Wikimedia/WikiBlame.yaml
@@ -8,7 +8,7 @@ BASIC:
 
 FILES:
   class: FlatPhpFFS
-  sourcePattern: "%GROUPROOT%/wikiblame/%CODE%.php"
+  sourcePattern: "%GROUPROOT%/wikiblame/wikiblame_inc/%CODE%.php"
   header: |
     <?php
     /** WikiBlame
